force-app/main/default/objects/CnISystemVariables__c/CnISystemVariables__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>variables/contants for C&amp;I.  to be used in code, informatica, etc</description>
    <label>C&amp;ISystemVariables</label>
</CustomObject>