force-app/main/default/objects/CnISystemVariables__c/fields/BasisFeeType__c.field-meta.xml
<CustomField>
    <fullName>BasisFeeType__c</fullName>
    <label>BasisFeeType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>