force-app/main/default/objects/CnISystemVariables__c/fields/CESCommEmailAddressID__c.field-meta.xml
<CustomField>
    <fullName>CESCommEmailAddressID__c</fullName>
    <description>ID of CES Communications org-wide email address</description>
    <inlineHelpText>ID of CES Communications org-wide email address</inlineHelpText>
    <label>CESCommEmailAddressID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>