force-app/main/default/objects/CnISystemVariables__c/fields/CESInternalAccountID__c.field-meta.xml
<CustomField>
    <fullName>CESInternalAccountID__c</fullName>
    <description>the id of the internal account for CES</description>
    <label>CESInternalAccountID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>