force-app/main/default/objects/CnISystemVariables__c/fields/CESRetailNomEmailAddressID__c.field-meta.xml
<CustomField>
    <fullName>CESRetailNomEmailAddressID__c</fullName>
    <description>CES Retail Nom org-wide email address ID</description>
    <inlineHelpText>CES Retail Nom org-wide email address ID</inlineHelpText>
    <label>CESRetailNomEmailAddressID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>