force-app/main/default/objects/CnISystemVariables__c/fields/ContractBasePricingRecType__c.field-meta.xml
<CustomField>
    <fullName>ContractBasePricingRecType__c</fullName>
    <label>ContractBasePricingRecType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>