force-app/main/default/objects/CnISystemVariables__c/fields/ContractBasePricingRecTypeID__c.field-meta.xml
<CustomField>
    <fullName>ContractBasePricingRecTypeID__c</fullName>
    <inlineHelpText>ID of &quot;Base Pricing&quot; Record Type (CES Contract)</inlineHelpText>
    <label>ContractBasePricingRecTypeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>