force-app/main/default/objects/CnISystemVariables__c/fields/ContractFixedTierRecType__c.field-meta.xml
<CustomField>
    <fullName>ContractFixedTierRecType__c</fullName>
    <label>ContractFixedTierRecType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>