force-app/main/default/objects/CnISystemVariables__c/fields/ContractFixedTierRecTypeID__c.field-meta.xml
<CustomField>
    <fullName>ContractFixedTierRecTypeID__c</fullName>
    <inlineHelpText>ID of &quot;Fixed Tier Pricing&quot; Record Type (CES Contract)</inlineHelpText>
    <label>ContractFixedTierRecTypeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>