force-app/main/default/objects/CnISystemVariables__c/fields/ContractPhase3RecType__c.field-meta.xml
<CustomField>
    <fullName>ContractPhase3RecType__c</fullName>
    <label>ContractPhase3RecType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>