force-app/main/default/objects/CnISystemVariables__c/fields/ContractPhase3StorageRecType__c.field-meta.xml
<CustomField>
    <fullName>ContractPhase3StorageRecType__c</fullName>
    <label>ContractPhase3StorageRecType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>