force-app/main/default/objects/CnISystemVariables__c/fields/ContractStorageRecType__c.field-meta.xml
<CustomField>
    <fullName>ContractStorageRecType__c</fullName>
    <label>ContractStorageRecType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>