force-app/main/default/objects/CnISystemVariables__c/fields/ContractStorageRecTypeID__c.field-meta.xml
<CustomField>
    <fullName>ContractStorageRecTypeID__c</fullName>
    <inlineHelpText>ID of &quot;Storage&quot; Record Type (CES Contract)</inlineHelpText>
    <label>ContractStorageRecTypeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>