force-app/main/default/objects/CnISystemVariables__c/fields/FeeCategoryPrice__c.field-meta.xml
<CustomField>
    <fullName>FeeCategoryPrice__c</fullName>
    <label>FeeCategoryPrice</label>
    <length>20</length>
    <type>Text</type>
</CustomField>