force-app/main/default/objects/CnISystemVariables__c/fields/FeeGroupBasis__c.field-meta.xml
<CustomField>
    <fullName>FeeGroupBasis__c</fullName>
    <label>FeeGroupBasis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>