force-app/main/default/objects/CnISystemVariables__c/fields/FeeGroupConsultant__c.field-meta.xml
<CustomField>
    <fullName>FeeGroupConsultant__c</fullName>
    <label>FeeGroupConsultant</label>
    <length>18</length>
    <type>Text</type>
</CustomField>