force-app/main/default/objects/CnISystemVariables__c/fields/FeeGroupMargin__c.field-meta.xml
<CustomField>
    <fullName>FeeGroupMargin__c</fullName>
    <label>FeeGroupMargin</label>
    <length>18</length>
    <type>Text</type>
</CustomField>