force-app/main/default/objects/CnISystemVariables__c/fields/FeeGroupNymex__c.field-meta.xml
<CustomField>
    <fullName>FeeGroupNymex__c</fullName>
    <label>FeeGroupNymex</label>
    <length>100</length>
    <type>Text</type>
</CustomField>