force-app/main/default/objects/CnISystemVariables__c/fields/FeeGroupOther__c.field-meta.xml
<CustomField>
    <fullName>FeeGroupOther__c</fullName>
    <label>FeeGroupOther</label>
    <length>100</length>
    <type>Text</type>
</CustomField>