force-app/main/default/objects/CnISystemVariables__c/fields/FeeGroupPhyPrem__c.field-meta.xml
<CustomField>
    <fullName>FeeGroupPhyPrem__c</fullName>
    <label>FeeGroupPhyPrem</label>
    <length>100</length>
    <type>Text</type>
</CustomField>