force-app/main/default/objects/CnISystemVariables__c/fields/FeeLockablePPName__c.field-meta.xml
<CustomField>
    <fullName>FeeLockablePPName__c</fullName>
    <description>what is the name of the lockable physical premium fee?</description>
    <inlineHelpText>what is the name of the lockable physical premium fee?</inlineHelpText>
    <label>FeeLockablePPName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>