force-app/main/default/objects/CnISystemVariables__c/fields/FeeSurrStorageName__c.field-meta.xml
<CustomField>
    <fullName>FeeSurrStorageName__c</fullName>
    <label>FeeSurrStorageName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>