force-app/main/default/objects/CnISystemVariables__c/fields/FlexOptionChoice__c.field-meta.xml
<CustomField>
    <fullName>FlexOptionChoice__c</fullName>
    <label>FlexOptionChoice</label>
    <length>10</length>
    <type>Text</type>
</CustomField>