force-app/main/default/objects/CnISystemVariables__c/fields/FlexOptionFix__c.field-meta.xml
<CustomField>
    <fullName>FlexOptionFix__c</fullName>
    <label>FlexOptionFix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>