force-app/main/default/objects/CnISystemVariables__c/fields/FlexOptionFloat__c.field-meta.xml
<CustomField>
    <fullName>FlexOptionFloat__c</fullName>
    <label>FlexOptionFloat</label>
    <length>10</length>
    <type>Text</type>
</CustomField>