force-app/main/default/objects/CnISystemVariables__c/fields/LegacyAccountCutoffDate__c.field-meta.xml
<CustomField>
    <fullName>LegacyAccountCutoffDate__c</fullName>
    <description>date used to compare against account creation date to determine if the external id update is for a legacy account. used in account afterupdate trigger.</description>
    <inlineHelpText>date used to compare against account creation date to determine if the external id update is for a legacy account. used in account afterupdate trigger.</inlineHelpText>
    <label>Legacy Account Cutoff Date</label>
    <type>Date</type>
</CustomField>