force-app/main/default/objects/CnISystemVariables__c/fields/NymexFeeType__c.field-meta.xml
<CustomField>
    <fullName>NymexFeeType__c</fullName>
    <label>NymexFeeType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>