force-app/main/default/objects/CnISystemVariables__c/fields/OptyWithCreditRecType__c.field-meta.xml
<CustomField>
    <fullName>OptyWithCreditRecType__c</fullName>
    <label>OptyWithCreditRecType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>