force-app/main/default/objects/CnISystemVariables__c/fields/PPFeeType__c.field-meta.xml
<CustomField>
    <fullName>PPFeeType__c</fullName>
    <label>PPFeeType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>