force-app/main/default/objects/CnISystemVariables__c/fields/PremiseGasRecType__c.field-meta.xml
<CustomField>
    <fullName>PremiseGasRecType__c</fullName>
    <label>PremiseGasRecType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>