force-app/main/default/objects/CnISystemVariables__c/fields/PricingMethodMonthly__c.field-meta.xml
<CustomField>
    <fullName>PricingMethodMonthly__c</fullName>
    <label>PricingMethodMonthly</label>
    <length>20</length>
    <type>Text</type>
</CustomField>