force-app/main/default/objects/CnISystemVariables__c/fields/PricingMethodWacog__c.field-meta.xml
<CustomField>
    <fullName>PricingMethodWacog__c</fullName>
    <label>PricingMethodWacog</label>
    <length>20</length>
    <type>Text</type>
</CustomField>