force-app/main/default/objects/CnISystemVariables__c/fields/QuoteBasePrice__c.field-meta.xml
<CustomField>
    <fullName>QuoteBasePrice__c</fullName>
    <label>QuoteBasePrice</label>
    <length>20</length>
    <type>Text</type>
</CustomField>