force-app/main/default/objects/CnISystemVariables__c/fields/QuoteBasePriceID__c.field-meta.xml
<CustomField>
    <fullName>QuoteBasePriceID__c</fullName>
    <inlineHelpText>ID of &quot;Base Pricing&quot; Record Type (Quote)</inlineHelpText>
    <label>QuoteBasePriceID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>