force-app/main/default/objects/CnISystemVariables__c/fields/QuoteExecutionRefreshGraceMinutes__c.field-meta.xml
<CustomField>
    <fullName>QuoteExecutionRefreshGraceMinutes__c</fullName>
    <description>how many minutes can expire before pricing needs to be refreshed to execute a quote</description>
    <inlineHelpText>how many minutes can expire before pricing needs to be refreshed to execute a quote</inlineHelpText>
    <label>QuoteExecutionRefreshGraceMinutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>