force-app/main/default/objects/CnISystemVariables__c/fields/QuoteFixedPrice__c.field-meta.xml
<CustomField>
    <fullName>QuoteFixedPrice__c</fullName>
    <label>QuoteFixedPrice</label>
    <length>20</length>
    <type>Text</type>
</CustomField>