force-app/main/default/objects/CnISystemVariables__c/fields/QuoteFixedPriceID__c.field-meta.xml
<CustomField>
    <fullName>QuoteFixedPriceID__c</fullName>
    <inlineHelpText>ID of &quot;Fixed Price Tier&quot; Record Type (Quote)</inlineHelpText>
    <label>QuoteFixedPriceID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>