force-app/main/default/objects/CnISystemVariables__c/fields/QuoteSpotPrice__c.field-meta.xml
<CustomField>
    <fullName>QuoteSpotPrice__c</fullName>
    <label>QuoteSpotPrice</label>
    <length>20</length>
    <type>Text</type>
</CustomField>