force-app/main/default/objects/CnISystemVariables__c/fields/QuoteSpotPriceID__c.field-meta.xml
<CustomField>
    <fullName>QuoteSpotPriceID__c</fullName>
    <inlineHelpText>ID of &quot;Spot Pricing&quot; Record Type (Quote)</inlineHelpText>
    <label>QuoteSpotPriceID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>