force-app/main/default/objects/CnISystemVariables__c/fields/QuoteStatusNew__c.field-meta.xml
<CustomField>
    <fullName>QuoteStatusNew__c</fullName>
    <label>QuoteStatusNew</label>
    <length>10</length>
    <type>Text</type>
</CustomField>