force-app/main/default/objects/CnISystemVariables__c/fields/QuoteSurrStoragePrice__c.field-meta.xml
<CustomField>
    <fullName>QuoteSurrStoragePrice__c</fullName>
    <label>QuoteSurrStoragePrice</label>
    <length>50</length>
    <type>Text</type>
</CustomField>