force-app/main/default/objects/CnISystemVariables__c/fields/StagingAgreeID__c.field-meta.xml
<CustomField>
    <fullName>StagingAgreeID__c</fullName>
    <description>ID of Agreement (Contract) that fixed contracts are imported into from Safari</description>
    <inlineHelpText>ID of Agreement (Contract) that fixed contracts are imported into from Safari</inlineHelpText>
    <label>StagingAgreeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>