force-app/main/default/objects/CnISystemVariables__c/fields/StagingOptyID__c.field-meta.xml
<CustomField>
    <fullName>StagingOptyID__c</fullName>
    <description>ID of Opportunity that fixed contracts are imported into from Safari</description>
    <inlineHelpText>ID of Opportunity that fixed contracts are imported into from Safari</inlineHelpText>
    <label>StagingOptyID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>