force-app/main/default/objects/CnISystemVariables__c/fields/SystemDateMonthAdj__c.field-meta.xml
<CustomField>
    <fullName>SystemDateMonthAdj__c</fullName>
    <description>Used to adjust the system date in Salesforce, subtracting the SystemDateMonthAdj from various date fields.</description>
    <inlineHelpText>Used to adjust the system date in Salesforce, subtracting the SystemDateMonthAdj from various date fields.</inlineHelpText>
    <label>SystemDateMonthAdj</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>