force-app/main/default/objects/CnISystemVariables__c/fields/TermExtBatchSize__c.field-meta.xml
<CustomField>
    <fullName>TermExtBatchSize__c</fullName>
    <defaultValue>5</defaultValue>
    <label>TermExtBatchSize</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>